# SAOD

./: .gitignore  README.md
Coursework/: CMakeLists.txt  in.txt  main.cpp  out.txt
Coursework/Class/: class.cpp  class.h
Coursework/DataIO/: data_io.cpp  data_io.h
Coursework/MainMenu/: main-menu.cpp  main-menu.h  main_menu.cpp  main_menu.h
Coursework/School/: school.cpp  school.h
Coursework/Student/: student.cpp  student.h
Coursework/data_management/: data_manager.cpp  data_manager.h
Coursework/structures/list/dynamic_list_element/: dynamic_list_element.cpp  dynamic_list_element.h
Coursework/structures/list/static_list_element/: static_list_element.cpp  static_list_element.h
Coursework/structures/school/: school.cpp  school.h
Coursework/structures/school/class/: class.cpp  class.h
Coursework/structures/school/class/student/: student.cpp  student.h
Coursework/ui/: application.cpp  application.h
Lab1/: CMakeLists.txt  Lab1.sln  main.cpp
Lab1/Lab1/: Lab1.cpp  Lab1.vcxproj
Lab2/: CMakeLists.txt  Lab2.sln  main.cpp
Lab2/Lab2/: Lab2.cpp  Lab2.vcxproj
Lab3/: CMakeLists.txt  main.cpp
Lab4/: CMakeLists.txt  main.cpp
Lab5/: CMakeLists.txt  main.cpp
Lab6/: CMakeLists.txt  main.cpp
Lab7/: CMakeLists.txt  main.cpp
Lab8/: CMakeLists.txt  main.cpp
Lab9/: CMakeLists.txt  main.cpp
Section1/Topic2/1.2.4/: CMakeLists.txt  main.cpp
Section1/Topic2/1.2.5/: CMakeLists.txt  main.cpp
Section1/Topic2/1.2.7/: CMakeLists.txt  main.cpp
Section1/Topic3/1.3.2/: CMakeLists.txt  main.cpp
Section1/Topic3/1.3.3/: CMakeLists.txt  main.cpp
(+45 files in other folders)
